--- a/default/dialog/DefaultDialogAccountSummary.htm
+++ b/default/dialog/DefaultDialogAccountSummary.htm
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
   <LINK Localized='TRUE' rel="STYLESHEET" type="text/css" href="/mam/default/localized/en-us/styles/styles.css">
-  <script src="js/browsercheck.js"></script>
+  <script src="/mpte/shared/browsercheck.js"></script>
   <script src="js/PopupEdit.js"></script>
 </HEAD>
 
