--- a/default/dialog/Calendars.List.htm
+++ b/default/dialog/Calendars.List.htm
@@ -5,6 +5,8 @@
     <title><MDMLABEL name="TEXT_MANAGE_CALENDARS"></MDMLABEL></title>        
     
     <!-- Include for popup windows -->
+    <script langugage="Javascript" src="/mpte/shared/browsercheck.js">
+    </script>  
     <script language="JavaScript" src="/mpte/shared/PopupEdit.js">
     </script>  
   </head>
