--- a/default/dialog/PriceList.Find.htm
+++ b/default/dialog/PriceList.Find.htm
@@ -2,6 +2,7 @@
 <HEAD>
 <LINK localized="TRUE" rel="STYLESHEET" type="text/css" href="/mcm/default/localized/en-us/styles/styles.css">
 <TITLE><MDMLABEL name="TEXT_KEYTERM_PRODUCT_OFFERING"></MDMLABEL></TITLE>
+<SCRIPT language="JavaScript" src="/mpte/shared/browsercheck.js"></SCRIPT>
 <SCRIPT language="JavaScript" src="/mdm/internal/mdm.JavaScript.lib.js"></SCRIPT>
 <SCRIPT>
 function handleEnter()
