--- a/default/dialog/ProductOffering.Edit.htm
+++ b/default/dialog/ProductOffering.Edit.htm
@@ -39,19 +39,19 @@
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_EFFECTIVEDATE_STARTDATE" Type="Caption">Effective Start Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="EffectiveDate__StartDate" class="field" type="text"><a href="#" onClick="getCalendarForStartDate(document.mdm.EffectiveDate__StartDate);return false"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
+    <td><input name="EffectiveDate__StartDate" class="field" type="text"><a href="#" onClick="getCalendarForStartDate(document.mdm.EffectiveDate__StartDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_EFFECTIVEDATE_ENDDATE" Type="Caption">Effective End Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="EffectiveDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.EffectiveDate__EndDate);return false"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
+    <td><input name="EffectiveDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.EffectiveDate__EndDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_AVAILABILITYDATE_STARTDATE" Type="Caption">Available Start Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="AvailabilityDate__StartDate" class="field" type="text"><a href="#" onClick="getCalendarForStartDate(document.mdm.AvailabilityDate__StartDate);return false"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
+    <td><input name="AvailabilityDate__StartDate" class="field" type="text"><a href="#" onClick="getCalendarForStartDate(document.mdm.AvailabilityDate__StartDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_AVAILABILITYDATE_ENDDATE" Type="Caption">Available End Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="AvailabilityDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.AvailabilityDate__EndDate);return false"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
+    <td><input name="AvailabilityDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.AvailabilityDate__EndDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
 </tr>
  </table>
 </td>
