--- a/default/dialog/ProductOffering.Find.htm
+++ b/default/dialog/ProductOffering.Find.htm
@@ -2,7 +2,8 @@
 <HEAD>
   <LINK  rel="STYLESHEET" type="text/css" href="/res/styles/styles.css">
   <LINK  rel="STYLESHEET" type="text/css" href="/res/styles/basestyle.css">
-  <title><MDMLABEL Name="TEXT_KEYTERM_PRODUCT_OFFERING"></MDMLABEL></title>                 
+  <title><MDMLABEL Name="TEXT_KEYTERM_PRODUCT_OFFERING"></MDMLABEL></title>
+<SCRIPT language="JavaScript" src="/mpte/shared/browsercheck.js"></SCRIPT>                 
 <SCRIPT language="JavaScript" src="/mdm/internal/mdm.JavaScript.lib.js"></SCRIPT>
 <SCRIPT>
   function handleEnter(e) {
