--- a/default/dialog/wizard/AddRecurringCharge/Wizard.html
+++ b/default/dialog/wizard/AddRecurringCharge/Wizard.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <html>
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/mcm/default/localized/en-us/styles/styles.css">
   
   <script language="javascript" src="../CycleConfig.js"></script>
+  <SCRIPT language="JavaScript" src="/mpte/shared/browsercheck.js"></SCRIPT>
   <SCRIPT language="JavaScript" src="/mdm/internal/mdm.JavaScript.lib.js"></SCRIPT>
   <script language="javascript" src="../mdmConfig.js"></script>
 
