CORE-7241 Product Offering: Effective start date cannot be set for PO.
Also updating javascript for ASP pages so that browser detection will work for IE 11 in addition to previous versions of IE.

--- a/MAM/default/dialog/DefaultDialogAccountSummary.htm
+++ b/MAM/default/dialog/DefaultDialogAccountSummary.htm
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
   <LINK Localized='TRUE' rel="STYLESHEET" type="text/css" href="/mam/default/localized/en-us/styles/styles.css">
-  <script src="js/browsercheck.js"></script>
+  <script src="/mpte/shared/browsercheck.js"></script>
   <script src="js/PopupEdit.js"></script>
 </HEAD>
 
