--- a/MCM/default/dialog/CounterParameter.Edit.htm
+++ b/MCM/default/dialog/CounterParameter.Edit.htm
@@ -3,7 +3,7 @@
   <LINK localized="TRUE" rel="STYLESHEET" type="text/css" href="/mcm/default/localized/en-us/styles/styles.css">
   <title>View Counter Parameter</title>       
   
-  <script language="javascript" src="../../lib/browsercheck.js">
+  <script language="javascript" src="/mpte/shared/browsercheck.js">
   </script>
   
   <script language="javascript" src="../../lib/PopupEdit.js">
