--- a/default/dialog/ProductOffering.Find.htm
+++ b/default/dialog/ProductOffering.Find.htm
@@ -53,7 +53,7 @@ document.onkeypress=handleEnter;
 <BODY class="side">
 <FORM name='mdm' onSubmit='return false;'>
 
-<div class="clsFindTab" style="background-color:#D2E0F2;"> 
+<div class="clsFindTab"> 
 
     <!-- start find dialog -->
     <table class="TabContainer" border="0" cellpadding="1" cellspacing="0" width="100%">
