Added browser detection for IE 11 and also fixed code for popup windows in non IE browsers

--- a/MCM/default/dialog/PriceAbleItem.Picker.htm
+++ b/MCM/default/dialog/PriceAbleItem.Picker.htm
@@ -4,7 +4,7 @@
   <SCRIPT language="JavaScript" src="/mdm/common/mdmPicker.Library.js"></SCRIPT>
   <title><MDMLABEL name="MCM_PICKER_TITLE"></MDMLABEL></title>     
 </HEAD>
-<body onLoad="SizeWindow();">
+<body onLoad="debugger;SizeWindow();">
 <FORM name='mdm'>
 <TABLE border="0" cellpadding="1" cellspacing="0" width="100%">
   <tr>
