FEAT-3754 [DEV] Change text under logo from "MetraNet" to "Company logo" Reviewer YZapara

--- a/Sites/MetraView/DesignerView/MetraView/index.htm
+++ b/Sites/MetraView/DesignerView/MetraView/index.htm
@@ -11,7 +11,7 @@
 <body>
 <div id="wrapper">
   <div id="header">
-    <div class="logo"> <a href="#"><img src="imgs/metratech-logo.gif" width="185" height="43" alt="MetraTech" /></a></div>
+    <div class="logo"> <a href="#"><img src="imgs/metratech-logo.gif" width="185" height="43" alt="Company logo" /></a></div>
     <div id="headernav">
       <ul>
         <li><a href="#">Log out</a></li>
