--- a/Sites/MetraView/DesignerView/MetraView/login.htm
+++ b/Sites/MetraView/DesignerView/MetraView/login.htm
@@ -12,7 +12,7 @@
 <div id="loginwrapper">
 <div class="logintop"></div>
 <div class="login">
-        <div class="logo"> <a href="#"><img src="imgs/metratech-logo.gif" width="185" height="43" alt="MetraTech" /></a></div>
+        <div class="logo"> <a href="#"><img src="imgs/metratech-logo.gif" width="185" height="43" alt="Company logo" /></a></div>
           <div class="loginbox">
             <h3>Login</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipi icing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
