--- a/default/dialog/Rates.RateSchedule.List.htm
+++ b/default/dialog/Rates.RateSchedule.List.htm
@@ -25,9 +25,7 @@
       <table width='100%'>
       <tr>
         <td>
-        <button class="clsButtonLarge" name="butNewRateSchedule" onClick="javascript:OpenDialogWindow('[NEW_RATESCHEDULE_WIZARD]', 'height=400,width=600,resizable=yes,scrollbars=yes'); return false;">
-           <MDMLABEL Name='TEXT_RATES_NEW_RATE'>New Rates</MDMLABEL>
-        </button>
+          <DYNAMIC_BUTTON_TEMPLATE />
         </td>
 #MDMIf DisplayDependencyCounts
 <td align=right>
@@ -43,7 +41,6 @@
 #MDMEndIf
 </tr>
 </table>
-
 </div>
 
 <!-- Do not close the FORM tag for a HTML Template file for the MDM Product View Browser -->
