FeaturesFEAT-3722 Merge Bling branch for 7.1 into 8.0 developFEAT-3845
View Product Offering page: missing icon next to "What are extended properties?"

--- a/MCM/default/dialog/ProductOffering.ViewEdit.htm
+++ b/MCM/default/dialog/ProductOffering.ViewEdit.htm
@@ -90,7 +90,7 @@ if (parent.ProductOfferingSelected)
 <MDMGrid Name="ExtendedProperties">Extended Properties</MDMGrid>
 <br>
 <center>
-<img src='..\localized\us\images\Icons\help_small.gif' alt='' border='0' align='absmiddle'>&nbsp;<a href="/MetraNetHelp/en-US/addingextendedproperties.hlp.htm" target="_blank" style="font-size: 9px;">What are extended properties?</a>
+<img src='..\localized\en-us\images\Icons\help_small.gif' alt='' border='0' align='absmiddle'>&nbsp;<a href="/MetraNetHelp/en-US/addingextendedproperties.hlp.htm" target="_blank" style="font-size: 9px;">What are extended properties?</a>
 </center>
 
 </FIELDSET>
