--- a/default/dialog/PriceAbleItem.NonRecurring.ViewEdit.htm
+++ b/default/dialog/PriceAbleItem.NonRecurring.ViewEdit.htm
@@ -29,7 +29,7 @@
 					    </tr>
 		       		  <tr>
 				        <td class="captionEW" style='vertical-align: top;'><MDMLABEL name="TEXT_FIELD_DESCRIPTION">Description</MDMLABEL>:&nbsp;&nbsp;</td>
-		        		<td><input name="DiplayDescriptions" MultiLanguage="true" class="field" size="50" type="text"></td>
+		        		<td><input name="DisplayDescriptions" MultiLanguage="true" class="field" size="50" type="text"></td>
 				      </tr>
 					  <tr><td>&nbsp;</td></tr>					 
 					   <tr>
@@ -62,21 +62,21 @@
 	<CENTER>
       #MDMIf ShowEditButton
 	    <div style="display: inline;">
-      <button class="clsButtonSmall" id="EditItem" name="EDIT" onclick="javascript:window.open('[NON_RECURRING_EDIT_DIALOG]?ID=[CURRENT_NON_RECURRING_ITEM_ID]&POBASED=[CURRENT_PO_BASED]', '_blank', 'height=100,width=100,resizable=yes,scrollbars=yes');return false;">
+      <button type="button" class="clsButtonSmall" id="EditItem" name="EDIT" onclick="javascript:window.open('[NON_RECURRING_EDIT_DIALOG]?ID=[CURRENT_NON_RECURRING_ITEM_ID]&POBASED=[CURRENT_PO_BASED]', '_blank', 'height=100,width=100,resizable=yes,scrollbars=yes');return false;">
         <MDMLABEL Name="TEXT_EDIT">Edit</MDMLABEL>
       </button>
-     <button class="clsButtonLarge" name="EditAdjustment" onClick="javascript:window.open('[PriceAbleItem.NonRecurring.ViewEdit.ADJUSTMENT_TEMPLATES_EDIT_DIALOG]?TemplateType=NRC&ID=[CURRENT_NON_RECURRING_ITEM_ID]&POID=[POID]', '_blank', 'height=400,width=500,resizable=yes,scrollbars=yes');return false;">
+     <button type="button" class="clsButtonLarge" name="EditAdjustment" onClick="javascript:window.open('[PriceAbleItem.NonRecurring.ViewEdit.ADJUSTMENT_TEMPLATES_EDIT_DIALOG]?TemplateType=NRC&ID=[CURRENT_NON_RECURRING_ITEM_ID]&POID=[POID]', '_blank', 'height=400,width=500,resizable=yes,scrollbars=yes');return false;">
       <MDMLABEL Name='TEXT_BUTTON_SET_UP_ADJUSTMENTS'></MDMLABEL>
       </button>
       </div>
       #MDMEndIf	
   
 #MDMIf ShowOKButton
-	<BUTTON Name="OK"  Class="clsOKButton" OnClick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>
+	<BUTTON Name="OK"  Class="clsOKButton" OnClick="mdm_RefreshDialog(this);return false;"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>
 #MDMEndIf
 	&nbsp;&nbsp;&nbsp;
 #MDMIf ShowCancelButton	
-	<BUTTON Name="CANCEL" Class="clsOKButton" OnClick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
+	<BUTTON Name="CANCEL" Class="clsOKButton" OnClick="mdm_RefreshDialog(this);return false;"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
 #MDMEndIf		
 	</CENTER>
   </td>
