--- a/default/dialog/PriceAbleItem.Usage.Edit.htm
+++ b/default/dialog/PriceAbleItem.Usage.Edit.htm
@@ -55,8 +55,8 @@
 <!-- Dialog Buttons -->
 <br><br><hr size="1">
 <div align="center">
-  <button Class='clsOKButton' name="OK" onclick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
-  <button Class='clsOKButton' name="CANCEL" onclick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
+  <button Class='clsOKButton' name="OK" onclick="mdm_RefreshDialog(this); return false;"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
+  <button Class='clsOKButton' name="CANCEL" onclick="mdm_RefreshDialog(this); return false;"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
 </div>
 
 </form>
