--- a/default/dialog/PriceableItem.Discount.Edit.htm
+++ b/default/dialog/PriceableItem.Discount.Edit.htm
@@ -53,8 +53,8 @@
 <!-- Dialog Buttons -->
 <br>
 <div align="center">
-  <button Class='clsOKButton' name="OK" onclick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
-  <button Class='clsOKButton' name="CANCEL" onclick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
+  <button Class='clsOKButton' name="OK" onclick="mdm_RefreshDialog(this); return false;"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
+  <button Class='clsOKButton' name="CANCEL" onclick="mdm_RefreshDialog(this);return false;"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>
 </div>
 </form>
 </body>
