--- a/MCM/default/dialog/Calendars.List.htm
+++ b/MCM/default/dialog/Calendars.List.htm
@@ -34,9 +34,9 @@
   
   <div style="margin:3">
       
-      <button class="clsButtonLarge" name="butCreateNewCalendar" onClick="javascript:OpenDialogWindow('gotoCalendarNewEdit.asp?Manage=1','');">
-          <MDMLABEL Name="TEXT_MPTE_NEWCALENDAR">Create New Calendar</MDMLABEL>
-      </button>
+    <button class="clsButtonLarge" name="butCreateNewCalendar" onClick="showModalDialog('gotoCalendarNewEdit.asp?Manage=1', null, 'center=yes; resizable=yes;dialogWidth:400px; dialogHeight:300px;');">
+      <MDMLABEL Name="TEXT_MPTE_NEWCALENDAR">Create New Calendar</MDMLABEL>
+    </button>
   </div>
 
 <!-- Do not close the FORM tag for a HTML Template file for the MDM Product View Browser -->
