--- a/default/dialog/RoleMemberAdd.htm
+++ b/default/dialog/RoleMemberAdd.htm
@@ -30,8 +30,7 @@
       [TEXT_DRAGDROP_ACCOUNTS_MESSAGE]
     </div>  
  -->
- <button onclick="getFrameMetraNet().getMultiSelection('setMultiSelection', 'DropGrid');return false;" name="selectAccounts" Class='clsOkButton'>Select Accounts</button> 
-
+ <button onclick="getFrameMetraNet().getMultiSelection('setMultiSelection', 'DropGrid');return false;" name="selectAccounts" Class='clsOkButton'>[TEXT_SELECT_ACCOUNTS]</button>
 <!-- *** Drag and Drop Form - and manual entry mode *** -->   
 #MDMIf ENABLE_ADVANCED_MANUAL_ENTRY   
    <br><br>
