--- a/MCM/default/dialog/PriceAbleItem.NonRecurring.Edit.htm
+++ b/MCM/default/dialog/PriceAbleItem.NonRecurring.Edit.htm
@@ -63,7 +63,7 @@
 	</tr>
 </table>
 <CENTER>
-<button Name="OK"  Class="clsOKButton" OnClick="mdm_RefreshDialog(this);return false;"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
-<button Name="CANCEL" Class="clsOKButton" OnClick="mdm_RefreshDialog(this);return false;"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
+<button Name="OK"  Class="clsOKButton" OnClick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_OK'>OK</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
+<button Name="CANCEL" Class="clsOKButton" OnClick="mdm_RefreshDialog(this);"><MDMLABEL Name='TEXT_CANCEL'>Cancel</MDMLABEL></button>&nbsp;&nbsp;&nbsp;
 </CENTER>
 </FORM></BODY></HTML>
