CORE-7865 Length of PO Partition ID field on the Product Offering screen needs to be increased. Reviewer RPuzikov

--- a/MCM/default/dialog/ProductOffering.ViewEdit.htm
+++ b/MCM/default/dialog/ProductOffering.ViewEdit.htm
@@ -77,7 +77,7 @@ if (parent.ProductOfferingSelected)
 </tr>
 <tr>
 <td Class='captionEW' nowrap><MDMLABEL Name="TEXT_PRODUCT_OFFERING_POPARTITIONID">PO PartitionId</MDMLABEL>:&nbsp;&nbsp;</td>
-<td Class='clsStandardText' nowrap><input type="text" name="POPartitionId" size="3" class="clsInputBox"></td>
+<td Class='clsStandardText' nowrap><input type="text" name="POPartitionId" class="clsInputBox"></td>
 </tr>
  </table>
 </td>
