--- a/default/dialog/ProductOffering.Edit.htm
+++ b/default/dialog/ProductOffering.Edit.htm
@@ -51,11 +51,11 @@
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_AVAILABILITYDATE_ENDDATE" Type="Caption">Available End Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="AvailabilityDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.AvailabilityDate__EndDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
+  <td><input name="AvailabilityDate__EndDate" class="field" type="text"><a href="#" onClick="getCalendarForEndDate(document.mdm.AvailabilityDate__EndDate);return false;"><img localized='true' src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''></a></td>
 </tr>
 <tr>
-<td Class='captionEW' nowrap><MDMLABEL Name="TEXT_PRODUCT_OFFERING_POPARTITIONID">PO PartitionId</MDMLABEL>:&nbsp;&nbsp;</td>
-<td Class='clsStandardText' nowrap><input type="text" name="POPartitionId" size="7" class="clsInputBox"></td>
+  <td Class='captionEW' nowrap><MDMLABEL Name="TEXT_PRODUCT_OFFERING_POPARTITIONID">PO PartitionId</MDMLABEL>:&nbsp;&nbsp;</td>
+  <td Class='clsStandardText' nowrap><input type="text" name="POPartitionId" class="clsInputBox"><img width=16 height=16 border=0 alt=''></td>
 </tr>
  </table>
 </td>
