--- a/MOM/default/dialog/BackOutRerun.BackoutStep1.htm
+++ b/MOM/default/dialog/BackOutRerun.BackoutStep1.htm
@@ -109,9 +109,9 @@
            <td colspan="8" style="background-color:#dbdbdb;border:solid 1px black;text-align:center;">
              <br>
              <!-- Add filter property buttons -->
-             <button class="clsButtonBlueXXLarge" name="AddProductProperty" onclick="mdm_RefreshDialog(this);">Add Product View Property</button>&nbsp;&nbsp;
-             <button class="clsButtonBlueXXLarge" name="AddServiceProperty" onclick="mdm_RefreshDialog(this);">Add Service Definition Property</button>&nbsp;&nbsp;
-             <button class="clsButtonBlueXXLarge" name="AddAccountProperty" onclick="mdm_RefreshDialog(this);">Add Account Property</button>
+             <button class="clsButtonBlueXXLarge" name="AddProductProperty" onclick="mdm_RefreshDialog(this); return false;">Add Product View Property</button>&nbsp;&nbsp;
+             <button class="clsButtonBlueXXLarge" name="AddServiceProperty" onclick="mdm_RefreshDialog(this); return false;">Add Service Definition Property</button>&nbsp;&nbsp;
+             <button class="clsButtonBlueXXLarge" name="AddAccountProperty" onclick="mdm_RefreshDialog(this); return false;">Add Account Property</button>
              <br><br>
            </td>
         </tr>
