--- a/default/dialog/BackoutRerun.BackoutStep2.htm
+++ b/default/dialog/BackoutRerun.BackoutStep2.htm
@@ -24,7 +24,7 @@
         Identify Complete<BR>Analyze Complete
         </TD>
         <TD>
-        &nbsp;&nbsp;&nbsp;<button class='clsButtonBlueMedium' Title='Reanalyze to determine if these records can still be backed out.' onclick='mdm_RefreshDialogUserCustom(this,"<MDMLABEL Name="ReRunId"></MDMLABEL>");' name='Reanalyze'>Reanalyze</button>
+        &nbsp;&nbsp;&nbsp;<button class='clsButtonBlueMedium' Title='Reanalyze to determine if these records can still be backed out.' onclick='mdm_RefreshDialogUserCustom(this,"<MDMLABEL Name="ReRunId"></MDMLABEL>"); return false;' name='Reanalyze'>Reanalyze</button>
       </TD>
    </TR>
    <TR><TD colspan='3'>&nbsp;</TD></TR>
