CORE-7990 : Ported changes from 7.1.1 Demo branch and made the same change in IntervalManagement view/edit page

--- a/MOM/default/dialog/IntervalManagement.htm
+++ b/MOM/default/dialog/IntervalManagement.htm
@@ -85,21 +85,21 @@
     </table>
     </td>
     <td>
-        <div id="actions" class="TableCell" style="width:300px;float:right;border:solid 1px black;margin-right:13px;">
-          <img src="/mom/default/localized/en-us/images/billinggroups/stats.gif">&nbsp;
-          <b><a href="javascript:void(0)" OnClick="window.open('IntervalManagement.Statistics.Frame.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=700,width=1000, resizable=yes, scrollbars=yes, status=yes');">[TEXT_VIEW_STATISTICS]</a></b><br>
-          [TEXT_VIEW_STATISTICS_DESCRIPTION]
-          <br><br>
-          <img src="/mom/default/localized/en-us/images/billinggroups/FindPayer.gif">&nbsp;    
-          <b><a href="javascript:void(0)" OnClick="window.open('BillingGroupLocate.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=300,width=550, resizable=yes, scrollbars=yes, status=yes');">[TEXT_LOCATE_PAYER]</a></b><br>
-          [TEXT_LOCATE_PAYER_DESCRIPTION]
+        <div id="actions" class="TableCell" style="width:300px;float:right;border:solid 2px black;margin-right:13px; -moz-border-radius: 15px; border-radius: 15px;padding: 10px 5px 10px 15px;">
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/chart_line.png"></div>
+          <div style='margin-left:30px; margin-bottom:10px;'><b><a href="javascript:void(0)" OnClick="window.open('IntervalManagement.Statistics.Frame.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=700,width=1000, resizable=yes, scrollbars=yes, status=yes');">[TEXT_VIEW_STATISTICS]</a></b><br>
+          [TEXT_VIEW_STATISTICS_DESCRIPTION]</div>
+          
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/inline_search.png"></div>    
+          <div style='margin-left:30px; margin-bottom:10px;'><b><a href="javascript:void(0)" OnClick="window.open('BillingGroupLocate.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=300,width=550, resizable=yes, scrollbars=yes, status=yes');">[TEXT_LOCATE_PAYER]</a></b><br>
+          [TEXT_LOCATE_PAYER_DESCRIPTION]</div>
           <!--<br><br>
           <img src="/mom/default/localized/en-us/images/billinggroups/ManualGroup.gif">&nbsp;    
           <b><a href="javascript:void(0)" OnClick="window.open('BillingGroupManualCreate.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=700,width=790, resizable=yes, scrollbars=yes, status=yes');">[TEXT_MANUALLY_ASSIGN_ACCOUNTS]</a></b><br>
           [TEXT_TEMP_BILLING_GROUP]-->
-	  <br><br>
-          <img src="/mom/default/localized/en-us/images/refresh.gif">&nbsp;    
-          <b><a href="javascript:location.reload(true)">[TEXT_REFRESH_INTERVAL_DETAILS]</a></b><br>
+	  
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/page_refresh.png"></div>  
+          <div style='margin-left:30px; margin-bottom:5px;'><b><a href="javascript:location.reload(true)">Refresh Interval Details</a></b><br></div>
         </div>
         
      </td>
